--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 .menu {
-    border: 1px solid rgb(255, 239, 228);
+    border-right: 1px solid rgb(255, 239, 228);
     display: flex;
     position: relative;
     flex-direction: column;
@@ -57,7 +57,6 @@
     font-weight: 500;
     font-size: 16px;
 }
-
 .bottom {
     position: absolute;
     bottom: 0;
@@ -65,6 +64,7 @@
 
 .text {
     padding-bottom: 5px;
+    cursor: pointer;
 }
 
 .menu-bar img {
@@ -167,6 +167,7 @@ svg {
     margin: 2px;
     display: grid;
     grid-template-columns: 0.6fr 2.8fr 0.1fr;
+    border-bottom: 1px solid rgb(255, 239, 228);
 }
 .menu2 .posthead a {
     font-size: 13px;
