--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@
 .menu1 {
     overflow: scroll;
     align-items: center;
-    border: none;
-    display: none;
 }
 
 .menu1::-webkit-scrollbar {
@@ -41,7 +39,11 @@
     height: 20px;
     border-radius: 50%;
 }
-
+#hover1{
+    background-color: rgb(247, 244, 247);
+    font-weight: 700;
+    border-radius: 0px 12px 12px 0px;
+}
 #hover1:hover,
 #hover2:hover,
 #hover3:hover,
@@ -49,7 +51,9 @@
 #hover5:hover,
 #hover6:hover,
 #hover7:hover {
+    background-color: rgb(247, 244, 247);
     font-weight: 700;
+    border-radius: 0px 12px 12px 0px;
 }
 
 .menu-bar {
@@ -168,6 +172,9 @@ svg {
 .menu2 div {
     margin: 3px;
 }
+.menu2 .posthead{
+    width: 350px;
+}
 
 .profile-main {
     padding-top: 35px;
@@ -207,6 +214,7 @@ svg {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    display: none;
 }
 .posts::-webkit-scrollbar {
     display: none;
