--- a/style.css
+++ b/style.css
@@ -90,9 +90,12 @@
 .story {
     display: flex;
     justify-content: center;
+    height: 200px;
+    width: 500px;
 }
 
 svg {
+    position: relative;
     stroke: #8a3ab8;
     stroke-linecap: round;
     stroke-width: 1.7;
@@ -143,11 +146,15 @@ svg {
 
 .post {
     display: flex;
-    flex-direction: column;
     margin: 20px 0px;
+    flex-direction: column;
     border-bottom: 1px solid rgb(255, 239, 228);
 }
-
+.profile-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .profile-icon img {
     border-radius: 50%;
 }
@@ -164,7 +171,7 @@ svg {
     grid-template-columns: 0.4fr 3fr 0.2fr;
     align-items: center;
     text-align: left;
-    padding-left: 6px;
+    margin: 5px 0px;
 }
 
 .post-anim {
@@ -172,8 +179,6 @@ svg {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 445px;
-    height: 510px;
 }
 
 #ani1,
@@ -229,10 +234,6 @@ svg {
     margin: 3px;
 }
 
-.menu2 .posthead {
-    width: 350px;
-}
-
 .profile-main {
     padding-top: 35px;
     margin: 2px;
@@ -249,9 +250,11 @@ svg {
     color: white;
     background-color: #1877F2;
 }
-
+.pic{
+    height: 500px;
+}
 .postbottom {
-
+    margin: 5px 0px;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -262,9 +265,10 @@ svg {
     grid-template-columns: 0.1fr 0.17fr 0.17fr 1.5fr;
     align-items: center;
     text-align: right;
+    margin: 0px 5px;
 }
 
-@media only screen and (max-width:1150px) and (min-width:750px) {
+@media only screen and (max-width:950px) and (min-width:750px) {
     .menu2 {
         display: none;
     }
@@ -288,8 +292,18 @@ svg {
         grid-template-columns: auto auto;
     }
 }
+@media screen and (max-width:650px) and (min-width:500px){
+    .story{
+        min-width: 500px;
+        max-width: 650px;
+        border: px solid;
+        background-color: black;
+        overflow: scroll;
+        position: static;
+    }
+}
 
-@media screen and (max-width:650px) {
+@media screen and (max-width:500px) {
 
     .menu0,
     .menu2 {
@@ -303,9 +317,20 @@ svg {
         grid-template-columns: 0.4fr 3fr auto;
         width: 100vw;
     }
-    .menu1{
-        margin: 10px;
-        position: absolute;
+    .postbottom{
+        width: 100vw;
     }
-    .story {}
+    .pic{
+        width: 100vw;
+        height: auto;
+    }
+    .story{
+        display: none;
+    }
+    .bottom-menu-margin{
+        margin: 0px 5px;
+    }
+}
+.menu-bottom{
+    display: none;
 }
