--- a/style.css
+++ b/style.css
@@ -267,7 +267,12 @@ svg {
     text-align: right;
     margin: 0px 5px;
 }
-
+.menu-top{
+    display: none;
+}
+.menu-bottom{
+    display: none;
+}
 @media only screen and (max-width:950px) and (min-width:750px) {
     .menu2 {
         display: none;
@@ -277,7 +282,7 @@ svg {
         grid-template-columns: auto auto;
     }
 }
-@media only screen and (max-width:750px) and (min-width:460px) {
+@media only screen and (max-width:750px) and (min-width:500px) {
     .menu2,.text {
         display: none;
     }
@@ -294,12 +299,7 @@ svg {
 }
 @media screen and (max-width:650px) and (min-width:500px){
     .story{
-        min-width: 500px;
-        max-width: 650px;
-        border: px solid;
-        background-color: black;
-        overflow: scroll;
-        position: static;
+       
     }
 }
 
@@ -309,7 +309,10 @@ svg {
     .menu2 {
         display: none;
     }
-
+    .menu1{
+        margin: 50px 0px;
+        overflow: scroll;
+    }
     .frame {
         grid-template-columns: auto;
     }
@@ -327,10 +330,40 @@ svg {
     .story{
         display: none;
     }
+    .profile-icon{
+        margin: 0px 5px;
+    }
     .bottom-menu-margin{
         margin: 0px 5px;
     }
-}
-.menu-bottom{
-    display: none;
+    #logo{
+        margin: 0px 10px;
+    }
+    .menu-top{
+        position: fixed;
+        top: 0;
+        background: white;
+        display: grid;
+        align-items: center;
+        text-align: left;
+        grid-template-columns: 2fr 0.3fr 0.3fr;
+        width: 100vw;
+    }
+    .menu-top img{
+        height: 25px;
+        margin: 10px 0px;
+    }
+    .menu-bottom{
+        position: fixed;
+        bottom: 0;
+        background: white;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100vw;
+    }
+    #hover1{
+        border-radius: 20px;
+    }
 }
