--- a/search.css
+++ b/search.css
@@ -131,7 +131,7 @@
 
 .posts{
     display: grid;
-    grid-template-columns: repeat(repeat,auto);
+    grid-template-columns: repeat(3,auto);
     width: 420px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -144,9 +144,9 @@
     filter: blur(3px);
 }
 input {
-    height: 65px;
+    height: 60px;
     width: 340px;
-    border-radius: 8px;
+    border-radius: 12px;
     outline: none;
     border: none;
     background-color: rgb(229, 229, 230);
@@ -191,7 +191,7 @@ input {
         display: none;
     }
     .menu1{
-        width: 100vw;
+    
     }
     .frame {
         grid-template-columns: auto;
@@ -213,24 +213,20 @@ input {
     input{
         position: fixed;
         width: 80%;
-        height: 40px;
+        height: 35px;
         margin: 10px;
-        border-radius: 15px;
-    }
-    .posts div{
-    
+        border-radius: 12px;
     }
     .posts{
-        grid-template-columns: repeat(auto-fit, minmax(140px,170px));
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         margin-top: 60px;
         border-radius: 0;
-        object-fit: contain;
     }
     .posts img{
-        /* max-height: 170px;
-        min-height: auto; */
+        display: block;
+        max-width: 100%;
+        height: auto;
     }
     
 }
