--- a/search.css
+++ b/search.css
@@ -253,6 +253,7 @@ input {
 
     input {
         position: fixed;
+        top: 0;
         width: 80%;
         height: 35px;
         margin: 10px;
