--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ svg {
     }
 
     .menu1 {
-        margin-top: 50px;
+        margin-top: 30px;
         padding-bottom: 50px;
     }
 
@@ -412,6 +412,7 @@ svg {
         text-align: left;
         grid-template-columns: 2fr 0.3fr 0.3fr;
         width: 100vw;
+        z-index: 100;
     }
 
     .menu-top img {
