--- a/style.css
+++ b/style.css
@@ -253,9 +253,9 @@ svg {
     background-color: #1877F2;
 }
 
-.pic {
-    height: 500px;
-}
+/* .pic {
+    height: 450px;
+} */
 
 .postbottom {
     margin: 5px 0px;
